<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <!-- POM's layout - http://www.javaworld.com/javaworld/jw-05-2006/jw-0529-maven.html -->
  <modelVersion>4.0.0</modelVersion>

  <!-- POM Relationships -->
  <parent>
    <groupId>org.uispec4j</groupId>
    <artifactId>uispec4j-root</artifactId>
    <version>2.5-SNAPSHOT</version>
  </parent>
  <artifactId>addressbook</artifactId>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <optional>true</optional>
    </dependency>
  </dependencies>

  <!-- Project Information -->
  <name>addressbook</name>
  <description>UISpec4J sample application</description>
  <url>https://www.uispec4j.org</url>
  <inceptionYear>2004</inceptionYear>
  <licenses>
    <license>
      <name>Common Public License</name>
      <url>https://www.opensource.org/licenses/cpl.php</url>
      <distribution>manual</distribution>
    </license>
  </licenses>

  <!-- Build Settings -->
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>17</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
        <configuration>
          <systemProperties>
            <property>
              <name>uispec4j.test.library</name>
              <value>junit</value>
            </property>
          </systemProperties>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>jdk17</id>
      <activation>
        <!-- <jdk>17</jdk> -->
        <activeByDefault/>
      </activation>
      <dependencies>
        <dependency>
          <groupId>org.uispec4j</groupId>
          <artifactId>uispec4j</artifactId>
          <version>${project.version}</version>
          <classifier>jdk17</classifier>
        </dependency>
      </dependencies>
    </profile>
  </profiles>
</project>
